添加消息接口

--- a/index.html
+++ b/index.html
@@ -1772,7 +1772,7 @@ https://api.open.jituancaiyun.com/openapi/media/upload
 <tr>
 <td>文本消息</td>
 <td>简单文本</td>
-<td>msg_box</td>
+<td>msg_text</td>
 </tr>
 <tr>
 <td>图片消息</td>
