--- a/index.html
+++ b/index.html
@@ -1747,7 +1747,7 @@ https://api.open.jituancaiyun.com/openapi/media/upload
 <li>https请求方式: POST</li>
 </ul>
 
-<pre><code>https://api.open.jituancaiyun.com/openapi/message/common/send
+<pre><code>https://api.open.jituancaiyun.com/openapi/message/common/send?accessToken=ACCESSTOKEN
 </code></pre>
 
 <table>
