--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 <li>https请求方式: GET</li>
 </ul>
 
-<pre><code> https://api.open.jituancaiyun.com/openapi/department/list?accessToken=ACCESSTOKEN
+<pre><code> https://api.open.jituancaiyun.com/openapi/department/list?deptId=0&accessToken=ACCESSTOKEN
 </code></pre>
 
 <ul>
@@ -710,6 +710,11 @@
 <td>accessToken</td>
 <td>是</td>
 <td>接口访问凭据</td>
+</tr>
+<tr>
+<td>deptId</td>
+<td>是</td>
+<td>部门id(根部门传0)</td>
 </tr>
 </tbody>
 </table>
