--- a/index.html
+++ b/index.html
@@ -1249,6 +1249,275 @@
 
 </code></pre>
 
+<h3>
+<a id="27-新增人员" class="anchor" href="#26-%E5%AF%BC%E5%85%A5%E9%83%A8%E9%97%A8%E6%88%90%E5%91%98%E5%85%A8%E9%87%8F%E6%8E%A5%E5%8F%A3%E6%88%96%E8%80%85%E6%9B%B4%E6%96%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.7 新增人员</h3>
+
+<ul>
+<li>https请求方式: POST</li>
+</ul>
+
+<pre><code> https://api.open.jituancaiyun.com/openapi/user/add?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>
+{
+    "deptId": 1,
+    "mobile":"18806886887",
+    "title":"销售小弟",
+    "name":"旻浩1"
+}
+</code></pre>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>accessToken</td>
+<td>是</td>
+<td>接口访问凭据</td>
+</tr>
+<tr>
+<td>name</td>
+<td>是</td>
+<td>成员名字(长度限制为1~64个字符)</td>
+</tr>
+<tr>
+<td>deptId</td>
+<td>是</td>
+<td>成员所属部门id</td>
+</tr>
+<tr>
+<td>mobile</td>
+<td>是</td>
+<td>手机号码。企业内必须唯一</td>
+</tr>
+<tr>
+<td>title</td>
+<td>是</td>
+<td>人员职务(长度限制为1~64个字符)</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
+
+<h3>
+<a id="28-修改人员" class="anchor" href="#26-%E5%AF%BC%E5%85%A5%E9%83%A8%E9%97%A8%E6%88%90%E5%91%98%E5%85%A8%E9%87%8F%E6%8E%A5%E5%8F%A3%E6%88%96%E8%80%85%E6%9B%B4%E6%96%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.8 修改人员</h3>
+
+<ul>
+<li>https请求方式: POST</li>
+</ul>
+
+<pre><code> https://api.open.jituancaiyun.com/openapi/user/update?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>
+{
+    "deptId": 1,
+    "mobile":"18806886887",
+    "uid":"12",
+    "title":"销售小弟",
+    "name":"旻浩1"
+}
+</code></pre>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>accessToken</td>
+<td>是</td>
+<td>接口访问凭据</td>
+</tr>
+<tr>
+<td>name</td>
+<td>是</td>
+<td>成员名字(长度限制为1~64个字符)</td>
+</tr>
+<tr>
+<td>uid</td>
+<td>是</td>
+<td>成员uid</td>
+</tr>
+<tr>
+<td>deptId</td>
+<td>是</td>
+<td>成员所属部门id</td>
+</tr>
+<tr>
+<td>mobile</td>
+<td>是</td>
+<td>手机号码。企业内必须唯一</td>
+</tr>
+<tr>
+<td>title</td>
+<td>是</td>
+<td>人员职务(长度限制为1~64个字符)</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
+<h3>
+<a id="29-删除人员" class="anchor" href="#26-%E5%AF%BC%E5%85%A5%E9%83%A8%E9%97%A8%E6%88%90%E5%91%98%E5%85%A8%E9%87%8F%E6%8E%A5%E5%8F%A3%E6%88%96%E8%80%85%E6%9B%B4%E6%96%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.9 删除人员</h3>
+
+<ul>
+<li>https请求方式: POST</li>
+</ul>
+
+<pre><code> https://api.open.jituancaiyun.com/openapi/user/delete?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>
+{
+    "uid":"12"
+}
+</code></pre>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>uid</td>
+<td>是</td>
+<td>成员uid</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
 <h2>
 <a id="3-发送聊天消息" class="anchor" href="#3-%E5%8F%91%E9%80%81%E8%81%8A%E5%A4%A9%E6%B6%88%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3， 发送聊天消息</h2>
 
